Fix single joke view action button alignment

--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -89,24 +89,26 @@
   display: grid;
   grid-gap: 30px;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 280px 1fr;
-  grid-template-areas: "joke ranking" "actions ranking";
+  grid-template-areas: "joke ranking";
   margin-bottom: 60px;
   @media screen and (max-width: 650px) {
     grid-template-columns: 1fr;
     grid-template-rows: max-content max-content max-content;
-    grid-template-areas: "joke" "actions" "ranking";
+    grid-template-areas: "joke" "ranking";
   }
-}
-
-.single-joke__joke-card {
-  grid-area: joke;
 }
 
 .single-joke__ranking {
   grid-area: ranking;
 }
 
-.single-joke__actions {
-  grid-area: actions;
+.single-joke__container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.single-joke__joke-card {
+  flex-grow: 1;
+  margin-bottom: 20px;
 }
